添加用户注册api

--- a/web/src/assets/style/reset.less
+++ b/web/src/assets/style/reset.less
@@ -41,3 +41,14 @@ table {
 	border-collapse: collapse;
 	border-spacing: 0;
 }
+
+// 重置组件样式
+
+// 消息通知
+.van-notify--primary,
+.van-notify--success {
+	opacity: 0.6;
+}
+.van-notify {
+	border-radius: 1rem
+}
